feat: integrate lambda expressions into real event and booking logic